--- a/src/components/gamecard-container.css
+++ b/src/components/gamecard-container.css
@@ -7,6 +7,10 @@
     flex-wrap: wrap;   
 }
 
+.no-games{
+    font-size: 30px;
+}
+
 .filter-container{
     margin: 50px auto;
     max-width: fit-content;
